# arachne

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.superpowers/brainstorm/35433-1774788612/content/: 01-world-map.html  02-room-grids.html  03-narrative-rethink.html  04-creative-redesign.html  waiting.html
crates/arachne-animation/: Cargo.toml
crates/arachne-animation/src/: animator.rs  clip.rs  easing.rs  keyframe.rs  lib.rs  skeleton.rs  skinning.rs  state_machine.rs  tween.rs
crates/arachne-app/: Cargo.toml
crates/arachne-app/src/: app.rs  components.rs  default_plugins.rs  diagnostic.rs  gpu_init.rs  lib.rs  plugin.rs  runner.rs  systems.rs  time.rs
crates/arachne-asset/: Cargo.toml
crates/arachne-asset/src/: bundle.rs  cache.rs  handle.rs  image.rs  io.rs  lib.rs  loader.rs  mesh.rs  scene.rs  server.rs
crates/arachne-audio/: Cargo.toml
crates/arachne-audio/src/: backend.rs  decoder.rs  effect.rs  lib.rs  mixer.rs  output.rs  source.rs  spatial.rs
crates/arachne-ecs/: Cargo.toml
crates/arachne-ecs/src/: archetype.rs  bundle.rs  change_detection.rs  commands.rs  component.rs  entity.rs  event.rs  lib.rs  parallel.rs  query.rs  resource.rs  schedule.rs  system.rs  world.rs
crates/arachne-input/: Cargo.toml
crates/arachne-input/src/: gamepad.rs  input_map.rs  keyboard.rs  lib.rs  mouse.rs  platform.rs  touch.rs  winit_bridge.rs
crates/arachne-math/: Cargo.toml
crates/arachne-math/src/: color.rs  fixed.rs  lib.rs  mat3.rs  mat4.rs  quat.rs  random.rs  rect.rs  transform.rs  vec2.rs  vec3.rs  vec4.rs
crates/arachne-networking/: Cargo.toml
crates/arachne-networking/src/: client.rs  lib.rs  lobby.rs  protocol.rs  server.rs  sync.rs  transport.rs
crates/arachne-particles/: Cargo.toml
crates/arachne-particles/src/: emitter.rs  lib.rs  module.rs  particle.rs  render.rs  sim_cpu.rs  sim_gpu.rs
crates/arachne-physics/: Cargo.toml
crates/arachne-physics/src/: broadphase.rs  collider.rs  constraint.rs  debug.rs  lib.rs  material.rs  narrowphase.rs  rigid_body.rs  solver.rs  spatial.rs  world.rs
crates/arachne-render/: Cargo.toml
crates/arachne-render/src/: buffer.rs  builtin_font.rs  builtin_tiles.rs  camera.rs  context.rs  graph.rs  lib.rs  pipeline.rs  pipeline_2d.rs  pipeline_3d.rs  pipeline_shadow.rs  pipeline_shapes.rs  pipeline_text.rs  pipeline_tilemap.rs  texture.rs
crates/arachne-render/src/render2d/: batch.rs  mod.rs  shape.rs  sprite.rs  text.rs  tilemap.rs
crates/arachne-render/src/render3d/: light.rs  material.rs  mesh_render.rs  mod.rs  shadow.rs  skybox.rs
crates/arachne-render/src/shaders/: mesh_pbr.wgsl  particle.wgsl  postprocess.wgsl  shadow.wgsl  shape.wgsl  skybox.wgsl  sprite.wgsl  text_sdf.wgsl  tilemap.wgsl
crates/arachne-scene/: Cargo.toml
crates/arachne-scene/src/: graph.rs  lib.rs  prefab.rs  serialize.rs  transform_prop.rs  visibility.rs
crates/arachne-ui/: Cargo.toml
crates/arachne-ui/src/: context.rs  layout.rs  lib.rs  render.rs  style.rs  widget.rs
crates/arachne-ui/src/widgets/: button.rs  checkbox.rs  dropdown.rs  image.rs  label.rs  mod.rs  panel.rs  slider.rs  textinput.rs
crates/arachne-wasm/: Cargo.toml
crates/arachne-wasm/src/: api.rs  audio_backend.rs  bindings.rs  canvas.rs  canvas_runtime.rs  eren_game.rs  events.rs  fetch.rs  lib.rs
crates/arachne-window/: Cargo.toml
crates/arachne-window/src/: config.rs  event_loop.rs  lib.rs  window.rs
docs/: eren-game-design-prompt.md  handover.md
docs/superpowers/specs/: 2026-03-28-playable-ads-sdk-design.md
examples/: Cargo.toml  lib.rs
examples/eren_game/: main.rs
examples/hello_triangle/: main.rs
examples/multiplayer_pong/: main.rs
examples/particle_fireworks/: main.rs
examples/physics_playground/: main.rs
examples/platformer/: main.rs
examples/product_configurator/: main.rs
examples/sprite_demo/: main.rs
tasks/: goal.md  roadmap.md  status.md  windowed-runtime.md
tests/benchmarks/: ecs_bench.rs  math_bench.rs  physics_bench.rs  render_bench.rs
tests/integration/: ecs_stress.rs  full_app_lifecycle.rs  physics_determinism.rs  scene_roundtrip.rs
tools/: frame_budget.sh  size_budget.sh
web/: build.sh  embed_example.html  eren_game.html  index.html
web/playable/: README.md  arachne-playable.js  bundler.sh  mraid-shim.js
web/playable/templates/: catch-game.html  physics-toy.html
