[package]
name = "arachne-render"
version = "0.1.0"
edition.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
arachne-math = { path = "../arachne-math" }
wgpu = "24"
raw-window-handle = "0.6"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"

[dev-dependencies]
pollster = "0.4"
env_logger = "0.11"
