[package]
name = "arachne-wasm"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies]
arachne-math = { path = "../arachne-math" }
arachne-ecs = { path = "../arachne-ecs" }
arachne-input = { path = "../arachne-input" }
arachne-audio = { path = "../arachne-audio" }
arachne-asset = { path = "../arachne-asset" }
arachne-app = { path = "../arachne-app" }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
